--- a/index.html
+++ b/index.html
@@ -117,26 +117,26 @@ li a{
 <div id="main">
 <div id="header">
 <div style="position:relative;top:+20px;left:0px;"><g:plusone size="medium"></g:plusone></div>
-<p id="mp1">
-QR Code scanner
-</p>
+	<p id="mp1">
+	QR Code scanner
+	</p>
 </div>
 <div id="mainbody">
 <table class="tsel" border="0" width="100%">
 <tr>
-<td valign="top" align="center" width="50%">
-<table class="tsel" border="0">
-<tr>
-<td><img class="selector" id="webcamimg" src="vid.png" onclick="setwebcam()" align="left" /></td>
-<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr>
-<tr><td colspan="2" align="center">
-<div id="outdiv">
-</div></td></tr>
-</table>
-</td>
+	<td valign="top" align="center" width="50%">
+		<table class="tsel" border="0">
+			<tr>
+			<td><img class="selector" id="webcamimg" src="vid.png" onclick="setwebcam()" align="left" /></td>
+			<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr>
+			<tr><td colspan="2" align="center">
+			<div id="outdiv">
+			</div></td></tr>
+		</table>
+	</td>
 </tr>
-<img src="vid.png"/>
-</td></tr> -->
+<!--<img src="vid.png"/> -->
+</td></tr>
 <tr><td colspan="3" align="center">
 <div id="result"></div>
 </td></tr>
