--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ li a{
 		<table class="tsel" border="0">
 			<tr>
 			<td><img class="selector" id="webcamimg" src="vid.png" onclick="setwebcam()" align="left" /></td>
-			<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr>
+			<!--<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr> -->
 			<tr><td colspan="2" align="center">
 			<div id="outdiv">
 			</div></td></tr>
@@ -145,6 +145,7 @@ li a{
 <button onclick="getLocation()">Position</button>
 <p id="demo"></p>
 
+<!--	
 <script>
 var x = document.getElementById("demo");
 
@@ -159,7 +160,7 @@ function getLocation() {
 function showPosition(position) {
   x.innerHTML = "Latitude: " + position.coords.latitude +
   "<br>Longitude: " + position.coords.longitude + "<br>Datetime: " + Date(); } </script>
-
+-->
 </td></tr>
 </table>
 </div>&nbsp;
